<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/str_login"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/layout_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_input"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_email"
                android:padding="10dp"
                android:textColorHint="@color/color_hint"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_text_input"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:textColorHint="@color/color_hint"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_edt"
            android:layout_alignEnd="@id/layout_edt"
            android:layout_marginTop="12dp"
            android:text="@string/str_forgot_pass"
            android:textColor="@color/color_forgot_pass"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="51dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/str_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textFontWeight="700"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:text="@string/str_or"
                android:textColor="@color/colorBlack"
                android:textFontWeight="500"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:text="@string/str_sign_up"
                android:textColor="@color/color_sign_up"
                android:textFontWeight="400"
                android:textSize="12sp" />


        </LinearLayout>


    </RelativeLayout>

</layout>